--- a/tinker/templates/error/403.html
+++ b/tinker/templates/error/403.html
@@ -1,7 +1,8 @@
 {% extends "tinker_base.html" %}
 
-{% block title %} Whoops {% endblock %}
+{% block title %} 403 Error {% endblock %}
 
+{% set title = '403 Error' %}
 
 {% block main_content %}
 
