--- a/tinker/templates/error/404.html
+++ b/tinker/templates/error/404.html
@@ -1,6 +1,8 @@
 {% extends "tinker_base.html" %}
 
-{% block title %} Whoops {% endblock %}
+{% block title %} 404 Error {% endblock %}
+
+{% set title = '404 Error' %}
 
 {% block main_content %}
 
