--- a/tinker/templates/error/500.html
+++ b/tinker/templates/error/500.html
@@ -1,6 +1,8 @@
 {% extends "tinker_base.html" %}
 
-{% block title %} Whoops {% endblock %}
+{% block title %} 500 Error {% endblock %}
+
+{% set title = '500 Error' %}
 
 {% block main_content %}
 
