--- a/tinker/templates/error/503.html
+++ b/tinker/templates/error/503.html
@@ -1,6 +1,8 @@
 {% extends "tinker_base.html" %}
 
-{% block title %} Whoops {% endblock %}
+{% block title %} 503 Error {% endblock %}
+
+{% set title = '503 Error' %}
 
 {% block main_content %}
 
