--- a/tinker/templates/admin/redirects/clear-redirects.html
+++ b/tinker/templates/admin/redirects/clear-redirects.html
@@ -1,40 +1,21 @@
+--- THIS IS A TEST (caleb) ---
+
 {% if changed|length == 0 and deleted|length == 0 %}
-    <p>There are no changes or deletions to worry about. Good work!</p>
+    There are no changes or deletions to worry about. Good work!
 {% else %}
     {% if changed|length > 0 %}
-        <table>
-            <caption>These are the redirects being changed</caption>
-            <thead>
-                <tr>
-                    <th>To Url</th>
-                    <th>Response</th>
-                </tr>
-            </thead>
-            {% for changed_dict in changed %}
-                <tr>
-                    <td>{{ changed_dict['to_url'] }}</td>
-                    <td>{{ changed_dict['response'] }}</td>
-                </tr>
-            {% endfor %}
-        </table>
+       These are the redirects being changed\n
+       To Url | Response
+        {% for changed_dict in changed %}
+            {{ changed_dict['to_url'] }} => {{ changed_dict['response'] }}
+        {% endfor %}
     {% endif %}
 
     {% if deleted|length > 0 %}
-        <table>
-            <caption>These are the redirects that can be deleted</caption>
-            <thead>
-                <tr>
-                    <th>From Path</th>
-                    <th>To Url</th>
-                </tr>
-            </thead>
-            {% for deleted_dict in deleted %}
-                <tr>
-                    <td>{{ deleted_dict['from_path'] }}</td>
-                    <td>{{ deleted_dict['to_url'] }}</td>
-                </tr>
-            {% endfor %}
-        </table>
-
+        These are the redirects that can be deleted
+        From Path | To Url
+        {% for deleted_dict in deleted %}
+            {{ deleted_dict['from_path'] }} => {{ deleted_dict['to_url'] }}
+        {% endfor %}
     {% endif %}
 {% endif %}
