--- a/tinker/templates/admin/redirects/clear-redirects.html
+++ b/tinker/templates/admin/redirects/clear-redirects.html
@@ -1,21 +1,21 @@
---- THIS IS A TEST (caleb) ---\n\n
+<p>--- THIS IS A TEST (caleb) ---</p>
 
 {% if changed|length == 0 and deleted|length == 0 %}
-    There are no changes or deletions to worry about. Good work!\n
+    <p>There are no changes or deletions to worry about. Good work!</p>
 {% else %}
     {% if changed|length > 0 %}
-       These are the redirects being changed\n\n
-       To Url | Response\n
+       <p>These are the redirects being changed</p>
+       <p>To Url | Response</p>
         {% for changed_dict in changed %}
-            {{ changed_dict['to_url'] }} => {{ changed_dict['response'] }}\n
+            <p>{{ changed_dict['to_url'] }} => {{ changed_dict['response'] }}</p>
         {% endfor %}
     {% endif %}
 
     {% if deleted|length > 0 %}
-        These are the redirects that can be deleted\n
-        From Path | To Url\n
+        <p>These are the redirects that can be deleted</p>
+        <p>From Path | To Url</p>
         {% for deleted_dict in deleted %}
-            {{ deleted_dict['from_path'] }} => {{ deleted_dict['to_url'] }}\n
+            <p>{{ deleted_dict['from_path'] }} => {{ deleted_dict['to_url'] }}</p>
         {% endfor %}
     {% endif %}
 {% endif %}
