--- a/tinker/templates/admin/sync/home.html
+++ b/tinker/templates/admin/sync/home.html
@@ -22,6 +22,17 @@
                         }
                     });
                 }
+
+                function submitChangeMetadata(){
+                    change_metadata_mapping = $('#change-metadata-mapping').val();
+                    change_metadata_old_value = $('#change-metadata-old-value').val();
+                    change_metadata_new_value = $('#change-metadata-new-value').val();
+
+                    // Can't use url_for here, as we need to dynamically add in values
+                    url = "/admin/sync/find-and-replace/" + change_metadata_mapping + "/" + change_metadata_old_value + "/" + change_metadata_new_value;
+                    window.open(url);
+                }
+
             </script>
             <div class="col-md-12">
                 <h2>Data Definitions and Metadata Sets</h2>
@@ -89,14 +100,7 @@
                 </label>
                 <label>Old/Current Value<input type="text" id="change-metadata-old-value"/></label>
                 <label>New Value<input type="text" id="change-metadata-new-value" /></label>
-                <div id='submit-change-metadata' class="btn btn-primary"
-                     onclick="postToURLWithSpinner('{{ url_for("SyncView:find_and_replace") }}',
-                             {
-                                 'change_metadata_mapping': $('#change-metadata-mapping').val(),
-                                 'change_metadata_old_value': $('#change-metadata-old-value').val(),
-                                 'change_metadata_new_value': $('#change-metadata-new-value').val()
-                             }
-                 )">
+                <div id='' class="btn btn-primary" data-reveal-id="confirmModal" data-toggle="modal" data-target="#sync_modal">
                     Find and Replace
                 </div>
             </div>
@@ -148,4 +152,27 @@
             });
         });
     </script>
+{% endblock %}
+
+{% block modalhtml %}
+    <div class="modal fade" id="sync_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"
+                            aria-hidden="true">&times;</button>
+                    <h3>WARNING!</h3>
+                    <h4 class="modal-title" id="myModalLabel">Are you sure you want to change these metadata values?</h4>
+                </div>
+                <div class="modal-body">
+                    This will change all occurrences of the metadata values with the new one. Be careful! This can mess
+                    values up if you do this wrong.
+                </div>
+                <div class="modal-footer">
+                    <div id="submit-change-metadata" data-dismiss="modal" class="btn btn-primary btn-alert" onclick="submitChangeMetadata()">Change Metadata Values</div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
