Add in specific note

--- a/tinker/templates/admin/sync/home.html
+++ b/tinker/templates/admin/sync/home.html
@@ -89,6 +89,7 @@
                 After a program name change, you can use this to automatically retag the new values.
                 <br/><br/>
                 *Note: this will take some time to run
+                <br/>*Note: This can only be run by Web Development currently. Message us if you need to use it!
                 </p>
 
                 <label>Which value set?
@@ -100,7 +101,7 @@
                 </label>
                 <label>Old/Current Value<input type="text" id="change-metadata-old-value"/></label>
                 <label>New Value<input type="text" id="change-metadata-new-value" /></label>
-                <div id='' class="btn btn-primary" data-reveal-id="confirmModal" data-toggle="modal" data-target="#sync_modal">
+                <div class="btn btn-primary" data-reveal-id="confirmModal" data-toggle="modal" data-target="#sync_modal">
                     Find and Replace
                 </div>
             </div>
