--- a/tinker/templates/admin/redirects/ajax.html
+++ b/tinker/templates/admin/redirects/ajax.html
@@ -27,7 +27,7 @@
         <!-- Delete Column -->
         <td>
             <div class="delete-column clickable" data-reveal-id="confirmModal" data-toggle="modal" data-target="#deleteModal"
-            data-from-path="{{ redirect.from_path }}">
+            data-id="{{ redirect.id }}">
                 <i class="fa fa-window-close"></i>
             </div>
         </td>
