--- a/tinker/templates/admin/redirects/home.html
+++ b/tinker/templates/admin/redirects/home.html
@@ -54,10 +54,10 @@
                         <table class="table">
                             <thead>
                             <tr>
-                                <th width="25" class="info-label">Info</th>
+                                <th width="25">Info</th>
                                 <th width="400">From Path</th>
                                 <th width="400">To URL</th>
-                                <th width="25" class="delete-label">Delete</th>
+                                <th width="25">Delete</th>
                             </tr>
                             </thead>
                             <tbody id="redirects-table">
@@ -92,7 +92,7 @@
                 });
                 //Listens for a click to delete a redirect
                 $(".delete-column").on('click', function () {
-                    $("#modal-confirm").attr("data-delete-path", $(this).data('from-path'));
+                    $("#modal-confirm").attr("data-delete-id", $(this).data('id'));
                 });
                 //Listens for a click to get info on a redirect
                 $(".info-column").on('click',function(){
@@ -181,9 +181,9 @@
                 });
 
                 $(".btn-alert").click(function () {
-                    var from_path = {"from_path": $(this).attr('data-delete-path')};
+                    var redirect_data = {"redirect_id": $(this).attr('data-delete-id')};
                     var url = "{{ url_for('redirects.RedirectsView:delete_redirect') }}";
-                    $.post(url, from_path, function (data) {
+                    $.post(url, redirect_data, function (data) {
                         if (data) {
                             loadTableForSearch($("#new-redirect-from").val(), 'from_path');
                         }
@@ -213,7 +213,7 @@
                     Your redirect will be gone forever and ever.
                 </div>
                 <div class="modal-footer">
-                    <a id="modal-confirm" data-delete-path="/delete/path" data-dismiss="modal"
+                    <a id="modal-confirm" data-delete-id="ID" data-dismiss="modal"
                        class="btn btn-primary btn-alert modal-confirm">Delete</a>
                 </div>
             </div>
