--- a/tinker/templates/admin/redirects/home.html
+++ b/tinker/templates/admin/redirects/home.html
@@ -51,12 +51,12 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <table class="table">
+                        <table class="table column-container">
                             <thead>
                             <tr>
                                 <th width="25">Info</th>
-                                <th width="400">From Path</th>
-                                <th width="400">To URL</th>
+                                <th width="200">From Path</th>
+                                <th width="200">To URL</th>
                                 <th width="25">Delete</th>
                             </tr>
                             </thead>
@@ -177,7 +177,9 @@
                     $.post(url, data, function (data) {
                         loadTableForSearch($('#new-redirect-from').val(), 'from_path');
                     });
-
+                    $('#expiration-date').val('');
+                    $('#new-redirect-short-url').attr('checked', false);
+                    $('#new-redirect-short-url').parent().removeClass('checked');
                 });
 
                 $(".btn-alert").click(function () {
